20160715:
	* TODO: normalize the size of the right panel
	* TODO: charset test plan needed in Windows

20160713:
	* main.c: fixed the argument problem when loading names from a file
	* autotest.sh: basic form workable.

20160710: move to 2.0
	* rename: the whole project will be based on IUP and libcsoup
	to support the Win32 and Linux/Unix with both GUI and CLI.

20110320: v1.99.2
	* baseline version released

20110312: v1.99.1
	* almost rewrote the whole thing
	* copyright license update to GPL v3
	* primary site moved to sourceforge.net

20110309: reopen the rename programming

May 6th, 2002 Xuming <xuming@bigfoot.com>
	version 1.2 fix the bug of strncpy() by Joerg Desch's patch 
	<jd@voelker-web.de>, which doesn't end strings with '\0'

Aug 29th, 2001 Xuming <xuming@iname.com>
	version 1.1
	